# gesti-budget

./: .gitignore  .gitmodules  01 - A lire en 1er.txt  CMakeLists.txt  CMakePresets.json  NEWS  README.md  gesti-budget.h
3rd/: CMakeLists.txt
3rd/cmake/: Lua.cmake  RapidJson.cmake  wxSQLite3.cmake
3rd/fmt/: CMakeLists.txt
cmake/: BuildHeader.cmake  BuildLayout.cmake  CPackSetup.cmake  CacheTool.cmake  CompilerSetup.cmake  CurlSetup.cmake  GitInfo.cmake  GraphVizExport.cmake  LinuxDetection.cmake  PackagingSetup.cmake  PlatformPaths.cmake  ShowVar.cmake  VcpkgSetup.cmake  Version.cmake  WxWidgetsSetup.cmake  install.cmake
po/: CMakeLists.txt
resources/: gbex.rc.in
src/: CMakeLists.txt  build.h.in  gesti-budget.cpp  main.cpp  main.h  versions.h.in  winmain.cpp
